syntax = "proto3";

package settings.profile.name.request;

message Request {
  string password = 3;
  optional string first_name = 1;
  optional string last_name = 2;
}
